Changes from jTDS 0.9
=========================

10/03/2004 - Alin Sinpalean
 o Corrected yet another charset issue. Charsets should work now.

10/02/2004 - Alin Sinpalean
 o Corrected a number of charset related issues, the most important of which
   was causing iso_1 to be mapped to ISO-8859-1 instead of Cp1252, which is the
   actual charset used (at least by MS SQL Server).
 o Also cleaned up Charsets.properties and added mappings from Java character
   set names back to themselves so that they can be used in the URL or
   Properties with their Java name.

09/30/2004 - Alin Sinpalean
 o Added some more information (from the FreeTDS mailing list) on
   sp_cursoroption parameters.

09/29/2004 - Alin Sinpalean
 o Conversion to LONGVARCHAR from most types was broken. Fixed.

===============================================================================
09/29/2004 - jTDS 0.9 released
===============================================================================

Changes from jTDS 0.9-rc2
=========================

09/28/2004 - Alin Sinpalean
 o Updated the FAQ, feature matrix and some of the other HTML files.
 o Updated driver version as returned by Driver and DatabaseMetaData to "0.9".
 o Minor javadoc cleanup.
 o Corrected bug [1036059] getTimestamp with Calendar applies tzone offset
   wrong way. The getTimestamp(), getTime() and getDate() methods with Calendar
   parameters were applying the time zone difference the same way as the set
   methods (hope it's not the set methods that were wrong, the JDBC spec is
   VERY vague about how the Calendar should be used).
 o Corrected bug [1036058] DataSource implementation broken. Thanks, Mike for
   finding this before the new release.

09/27/2004 - Alin Sinpalean
 o Update counts are read and cached completely (either until the end of the
   response or until a ResultSet is encountered) and exceptions are thrown when
   an output parameter is read before being set. This means that stored