@@ -1,6 +1,10 @@
 Changes from jTDS 0.9
 =========================
 
+10/04/2004 - Alin Sinpalean
+ o Corrected bug [1039876] MS SQL JtdsResultSet.isAfterLast() always returns
+   false.
+
 10/03/2004 - Alin Sinpalean
  o Corrected yet another charset issue. Charsets should work now.
 
